--- a/main/res/layout/venue_map_activity.xml
+++ b/main/res/layout/venue_map_activity.xml
@@ -19,7 +19,7 @@
     android:layout_alignParentRight="true"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
-    android:text="Maps" />
+    android:background="@android:drawable/ic_menu_compass" />
 
   <Button
     android:id="@+id/yelpButton"
