Speed up list views by using "end" ellipsize instead of "marquee"
committer: Joe LaPenna <joe@joelapenna.com>

--- a/main/res/layout/tip_list_item.xml
+++ b/main/res/layout/tip_list_item.xml
@@ -60,6 +60,6 @@
 
     android:maxLines="1"
     android:scrollHorizontally="true"
-    android:ellipsize="marquee" />
+    android:ellipsize="end" />
 
 </RelativeLayout>
