--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -22,8 +22,7 @@
     android:textAppearance="@android:style/TextAppearance.Medium"
 
     android:maxLines="1"
-    android:scrollHorizontally="true"
-    android:ellipsize="marquee" />
+    android:ellipsize="end" />
 
   <TextView
     android:id="@+id/timeTextView"
@@ -43,7 +42,7 @@
 
     android:maxLines="1"
     android:scrollHorizontally="true"
-    android:ellipsize="marquee" />
+    android:ellipsize="end" />
 
   <TextView
     android:id="@+id/shoutTextView"
@@ -63,6 +62,6 @@
 
     android:maxLines="1"
     android:scrollHorizontally="true"
-    android:ellipsize="marquee" />
+    android:ellipsize="end" />
 
 </RelativeLayout>
