--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -10,7 +10,7 @@
     android:id="@+id/venueName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Large" />
+    android:textAppearance="@android:style/TextAppearance.Medium" />
   <TextView
     android:id="@+id/venueLocationLine1"
     android:layout_width="fill_parent"
