--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -22,19 +22,26 @@
     <item
       name="android:layout_width">fill_parent</item>
     <item
-      name="android:paddingTop">5dip</item>
+      name="android:paddingTop">2dip</item>
     <item
-      name="android:paddingBottom">5dip</item>
+      name="android:paddingBottom">3dip</item>
     <item
       name="android:paddingLeft">5dip</item>
     <item
       name="android:background">@drawable/foursquare_gradient</item>
     <item
-      name="android:textAppearance">@android:style/TextAppearance.Medium</item>
+      name="android:textAppearance">@android:style/TextAppearance.Small</item>
     <item
-      name="android:shadowColor">#BB000000</item>
+      name="android:shadowColor">#111111</item>
     <item
       name="android:shadowRadius">1</item>
+    <item
+      name="android:shadowDy">1</item>
+    <item
+      name="android:textStyle">bold</item>
+    <item
+      name="android:textColor">#FFFFFF</item>
+
 
   </style>
 
