Fix up finish()ing preferences and main when logging out.

--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -42,7 +42,7 @@
     <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="logout"
       android:title="Logout"
-      android:summary="Logout of Foursquare" />
+      android:summary="Sign out of Foursquare" />
   </PreferenceCategory>
 
 </PreferenceScreen>
