Set up separate xml for lists and venu activity headers

--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -20,7 +20,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
       <include
-        layout="@layout/venue_list_item" />
+        layout="@layout/venue_activity_header" />
       <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="fill_parent"
