Got the padding right, but the gradient is too tall.  Needs to only last for 14px, but stretches the entire height.

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -47,7 +47,13 @@
   	name="venueListItemStyle"
   	parent="@android:style/Widget.ListView">
   	<item
-      name="android:paddingLeft">20dip</item>
+      name="android:paddingLeft">40dip</item>
+    <item
+      name="android:paddingTop">4dip</item>
+    <item
+      name="android:paddingBottom">6dip</item>
+    <item
+      name="android:background">@drawable/venue_list_gradient</item>
   </style>
   <style
   	name="venueActivityHeaderStyle"
