--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -61,7 +61,7 @@
     <item
       name="android:paddingTop">4dip</item>
     <item
-      name="android:paddingBottom">6dip</item>
+      name="android:layout_marginBottom">6dip</item>
   </style>
 
   <!--
