--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -57,9 +57,9 @@
     name="venueActivityHeaderStyle"
     parent="@android:style/Widget.ListView">
     <item
-      name="android:paddingLeft">9dip</item>
+      name="android:layout_marginLeft">9dip</item>
     <item
-      name="android:paddingTop">4dip</item>
+      name="android:layout_marginTop">4dip</item>
     <item
       name="android:layout_marginBottom">6dip</item>
   </style>
