Fix scaling issue for map marker.

--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -16,7 +16,7 @@
 
     android:src="@drawable/map_marker_blue"
 
-    android:scaleType="center" />
+    android:scaleType="matrix" />
 
   <TextView
     android:id="@+id/venueName"
