Make Checkin Button in VenueActivity header work. (Still need to update UserActivity)

--- a/main/res/layout/venue_header.xml
+++ b/main/res/layout/venue_header.xml
@@ -40,6 +40,8 @@
     android:layout_below="@id/venueName"
     android:layout_alignWithParentIfMissing="true"
 
+    android:enabled="false"
+
     android:text="Checkin!" />
 
   <TextView
