--- a/main/res/layout/user_activity.xml
+++ b/main/res/layout/user_activity.xml
@@ -68,7 +68,7 @@
   <include
     android:id="@+id/venue"
 
-    layout="@layout/venue_header"
+    layout="@layout/user_activity_venue"
 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
