--- a/main/res/layout/venue.xml
+++ b/main/res/layout/venue.xml
@@ -41,6 +41,7 @@
     android:layout_alignWithParentIfMissing="true"
 
     android:enabled="false"
+    android:visibility="gone"
 
     android:text="Checkin!" />
 
