--- a/main/res/layout/add_venue_activity.xml
+++ b/main/res/layout/add_venue_activity.xml
@@ -8,8 +8,7 @@
     <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:orientation="vertical"
-      android:layout_margin="6dip">
+      android:orientation="vertical">
 
       <EditText
         android:id="@+id/nameEditText"
