--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -11,7 +11,9 @@
     android:id="@+id/messageTextView"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="6dip" />
+    android:layout_marginBottom="6dip"
+
+    android:textAppearance="@android:style/TextAppearance.Medium" />
 
   <WebView
     android:id="@+id/webView"
