--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -9,17 +9,17 @@
     <CheckBoxPreference
       android:key="share_checkin"
       android:persistent="true"
-      android:title="Share Checkins"
-      android:summaryOn="By default, show checkins to other users."
-      android:summaryOff="By default, hide checkins to other users."
+      android:title="Tell my friends"
+      android:summaryOn="By default, tell my friends when I check-in."
+      android:summaryOff="By default, don't tell my friends when I check-in."
       android:defaultValue="true" />
     <CheckBoxPreference
       android:key="twitter_checkin"
       android:persistent="true"
       android:dependency="share_checkin"
-      android:title="Twitter Checkins"
-      android:summaryOn="By default, tweet your checkins."
-      android:summaryOff="By default, do not tweet your checkins."
+      android:title="Tell Twitter"
+      android:summaryOn="By default, tweet my checkins."
+      android:summaryOff="By default, don't tweet my checkins."
       android:defaultValue="false" />
   </PreferenceCategory>
 
