Clean up styles a bit.

--- a/main/res/layout/tip_list_item.xml
+++ b/main/res/layout/tip_list_item.xml
@@ -5,7 +5,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:padding="5px">
+  style="@style/listItemStyle">
 
   <!--
     If this were focusable, we wouldn't be able to put a click listener on the list view. Combine
@@ -53,7 +53,7 @@
     android:layout_below="@id/tipTextView"
 
     android:paddingRight="6dip"
-    
+
     android:gravity="right"
     android:textAppearance="@android:style/TextAppearance.Small"
     android:textColor="#7EDDFC"
