--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -45,8 +45,11 @@
       name="android:paddingTop">4dip</item>
     <item
       name="android:paddingBottom">6dip</item>
-    <item
+    <!--
+      Until we can get this gradient looking nice, disable it. -->
+    <!-- <item
       name="android:background">@drawable/list_item_gradient</item>
+    -->
   </style>
 
   <style
