--- a/main/res/layout/user_activity.xml
+++ b/main/res/layout/user_activity.xml
@@ -8,48 +8,70 @@
   android:layout_height="wrap_content"
   android:padding="5dip">
 
-  <ImageView
-    android:id="@+id/photo"
+  <RelativeLayout
+    android:id="@+id/userLayout"
+    
+    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
 
-    android:layout_width="75px"
-    android:layout_height="75px"
-
-    android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
-    android:layout_marginRight="6dip"
-
-    android:scaleType="center" />
-
-  <TextView
-    android:id="@+id/name"
-
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-
-    android:layout_toRightOf="@id/photo"
     android:layout_alignParentRight="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignWithParentIfMissing="true"
+    android:layout_alignParentTop="true">
 
-    android:textAppearance="@android:style/TextAppearance.Large"
+    <ImageView
+      android:id="@+id/photo"
 
-    android:singleLine="true"
-    android:ellipsize="marquee"
+      android:layout_width="75px"
+      android:layout_height="75px"
 
-    android:gravity="center_vertical" />
+      android:layout_alignParentTop="true"
+      android:layout_alignParentLeft="true"
+      android:layout_marginRight="6dip"
 
-  <TextView
-    android:id="@+id/city"
+      android:scaleType="center" />
 
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    <TextView
+      android:id="@+id/name"
 
-    android:layout_toRightOf="@id/photo"
-    android:layout_alignParentRight="true"
-    android:layout_below="@id/name"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
 
-    android:singleLine="true"
-    android:ellipsize="marquee" />
+      android:layout_toRightOf="@id/photo"
+      android:layout_alignParentRight="true"
+      android:layout_alignParentTop="true"
+
+      android:textAppearance="@android:style/TextAppearance.Large"
+
+      android:singleLine="true"
+      android:ellipsize="marquee"
+
+      android:gravity="center_vertical" />
+
+    <TextView
+      android:id="@+id/city"
+
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+
+      android:layout_toRightOf="@id/photo"
+      android:layout_below="@id/name"
+      android:layout_alignParentRight="true"
+
+      android:singleLine="true"
+      android:ellipsize="marquee" />
+
+    <TextView
+      android:id="@+id/shout"
+
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+
+      android:layout_toRightOf="@id/photo"
+      android:layout_below="@id/city"
+      android:layout_alignParentRight="true"
+      
+      android:textStyle="italic" />
+  </RelativeLayout>
 
   <TextView
     android:id="@+id/venueHeader"
@@ -63,7 +85,7 @@
 
     android:layout_alignParentRight="true"
     android:layout_alignParentLeft="true"
-    android:layout_below="@id/photo"
+    android:layout_below="@id/userLayout"
     style="@style/listSeparatorTextViewStyle" />
 
   <com.joelapenna.foursquared.widget.VenueView
@@ -75,7 +97,7 @@
     android:layout_alignParentRight="true"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/venueHeader"
-    
+
     foursquared:checkinButton="false" />
 
   <TextView
@@ -90,6 +112,7 @@
     android:layout_alignParentRight="true"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/venue"
+    android:layout_marginTop="3dip"
 
     style="@style/listSeparatorTextViewStyle" />
 
@@ -103,6 +126,8 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentBottom="true"
     android:layout_below="@id/badgesHeader"
+
+    android:layout_marginTop="3dip"
 
     android:horizontalSpacing="12dip"
     android:verticalSpacing="12dip"
