Use Theme.Light for app! Fix some UI nits.

--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -18,5 +18,5 @@
   <WebView
     android:id="@+id/webView"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="fill_parent" />
 </LinearLayout>
