--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -44,15 +44,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
+    android:layout_below="@id/firstLine"
     android:layout_alignParentRight="true"
     android:layout_alignParentBottom="true"
-    android:layout_below="@id/firstLine"
     android:layout_alignWithParentIfMissing="true"
 
-    android:paddingRight="3dip"
+    android:gravity="right|bottom"
 
-    android:textAppearance="@android:style/TextAppearance.Small"
-    android:textColor="#7EDDFC"
+    style="@style/secondaryTextStyle"
 
     android:maxLines="1"
     android:scrollHorizontally="true"
