--- a/main/res/layout/venue_tab_with_list.xml
+++ b/main/res/layout/venue_tab_with_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<merge
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
@@ -16,4 +16,4 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" />
 
-</LinearLayout>
+</merge>
