--- a/main/res/layout/login_activity.xml
+++ b/main/res/layout/login_activity.xml
@@ -45,6 +45,7 @@
       android:id="@+id/button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
+      android:enabled="false"
       android:textAppearance="@android:style/TextAppearance.Large"
       android:text="Log-in" />
   </LinearLayout>
